# ModelRunner

./: .dockerignore  .env  .gitignore  Cargo.toml  Compose.yml  Dockerfile  LICENSE  ModelRunner.toml.example  README.md  compose.yml  rustfmt.toml  transcribe.http
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: check.yml  cleanup.yml  release.yml
.sqlx/: query-4253a2b2e8cd8d35e2e731aa3b026b25fcab84ccbb56e3436f6d68704b024468.json  query-5f242c04854f136300ead429f875ff3a07a8b23e8888c5d7011b2955161402f1.json  query-a0de167b8064cbce4d17d3f3009de31f16f81439cc9bb9f8d439ef80cd8f488a.json  query-bd85b267acd4824739d2170a3d4c6d418fd6d28a2301509c8da4660bb2632c49.json
certs/: testdomain.cert  testdomain.key
deployments/: README.md  compose.full.yml  compose.yml
deployments/cf-tunnel/: compose.yml  tunnel-secret.txt
deployments/grafana/: compose.yml
deployments/telemetry/: README.md  compose.yml  otel-collector.yaml  prometheus.yml  tempo.yaml
deployments/telemetry/config/grafana/: grafana-dashboards.yaml  grafana-datasources.yaml  grafana.ini
deployments/telemetry/config/grafana/dashboards/: otel-contrib.json  prometheus.json
deployments/telemetry/config/loki/: loki.yaml
deployments/telemetry/config/otel/: otel-collector.yaml
deployments/telemetry/config/tempo/: tempo.yaml
deployments/traefik/: compose.override.yml  compose.yml
deployments/traefik/config/traefik/: traefik.yml
deployments/watchtower/: compose.yml
examples/http/: auth.http  health.http  http-client.env.json  instruct.http  model.http  raw.http  transcribe.http
migrations/: 20240305201825_api_clients.sql  20240307181435_api_clients.sql  20240318231521_created_by.sql  20240410080417_update_permissions.sql
src/: auth.rs  config.rs  error.rs  extractors.rs  main.rs  telemetry.rs
src/api/: api_client.rs  auth.rs  client.rs  extractors.rs  mod.rs
src/inference/: audio_pipeline.rs  audo_pipeline.rs  general.rs  mod.rs  model_config.rs  pcm_decode.rs  text_pipeline.rs  token_output_stream.rs
src/inference/models/: mistral7b.rs  mod.rs  model.rs  openhermes.rs  phi.rs  phi2.rs  stablelm2.rs  whisper.rs
src/inference/task/: info.rs  instruct.rs  mod.rs  raw.rs  transcribe.rs
src/model/: mod.rs  model.rs  phi2.rs  runner.rs
src/model/task/: instruct.rs  mod.rs  raw.rs
src/models/: api.rs  mod.rs  model.rs  pcm_decode.rs  phi2.rs  runner.rs  whisper.rs
src/models/task/: mod.rs  raw.rs  transcribe.rs
