[package]
name = "model_runner"
version = "1.2.2"
edition = "2021"
repository = "https://github.com/frkri/ModelRunner"
license = "MIT"
description = "Allows you to run LLM models locally with an HTTP API"
keywords = ["LLM", "API", "HTTP"]
readme = "README.md"

[profile.dev]
opt-level = 3 # Required as otherwise the models are too slow to run

[profile.release]
codegen-units = 1
strip = true
lto = true

[[bin]]
name = "model_runner_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "model_runner_health"
path = "src/bin/health.rs"

[dependencies]
anyhow = "1.0.81"
log = "0.4.20"
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt", "signal"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "rustls-tls"] }
axum = { version = "0.7.5", features = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing", "http2", "macros", "multipart"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-macros = "0.4.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
toml = "0.8.12"
clap = { version = "4.5.4", features = ["derive", "color", "env"] }
clap-serde-derive = "0.2.1"
tokenizers = "0.15.2"
hf-hub = "0.3.2"
candle-transformers = "0.4.0"
candle-core = "0.4.0"
candle-nn = "0.4.0"
byteorder = "1.5.0"
symphonia = "0.5.3"
rand = "0.8.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "sqlx-sqlite"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
base64ct = "1.6.0"
url = "2.5.0"
